# spellpaste

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/pages/: HomePage.jsx  InitPage.jsx  MainPage.jsx  OnboardingPage.jsx  SettingsPage.jsx  SpellPage.jsx
src/services/: evaluateService.js  hotkeyManager.js  hotkeyService.js  localFileService.js  sandbox.js  sandboxWorker.js  settingService.js  spellService.js  trayManager.js  trayService.js  windowService.js
src/stores/: settingStore.js  spellStore.js
